<resources>
    <string name="app_name">PharmaLiv</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="change_address">Change Address</string>
    <string name="my_orders">My Orders</string>
    <string name="scan_ordinance">Add Ordinance</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="categories">Medications Categories</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="family_name">Family Name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="logging_in">Signing in please wait…</string>
    <string name="singing_up">Signing up please wait…</string>
    <string name="sing_in_successful">Signing Success</string>
    <string name="sing_up_successful">Registering Success</string>
    <string name="no_first_name">First Name is Empty</string>
    <string name="no_family_name">Family Name is Empty</string>
    <string name="password_not_confirmed">Confirm Password please</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="send">send</string>
    <string name="add">add</string>
    <string name="select_pharmacy">Select Pharmacy</string>
    <string name="service_not_available">Service not available \n Cannot detect address</string>
    <string name="invalid_information">Invalid location</string>
    <string name="address_not_found">Address not found</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="set_quantity">Set Quantity</string>
    <string name="set_medication">Set Medication</string>
    <string name="enter_ordinance">Fill Ordinance</string>
    <string name="title_activity_sing_up">SignUP</string>
    <string name="client">Client</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="delivery">Delivery Man</string>
    <string name="empty_medication_list">The medication list is empty</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_location">get Location</string>
    <string name="no_name">Pharmacy name is empty</string>
    <string name="no_lat">Latitude is empty</string>
    <string name="no_long">Longitude is empty</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_pharmacy">PharmacyActivity</string>
    <string name="accept">Accept</string>
    <string name="select_delivery">Select Delivery Man</string>
    <string name="set_total_price">Set Total Price</string>
    <string name="decline">Decline</string>
    <string name="no_image">No Ordinance Scanned</string>
    <string name="put_total">Put Total Price</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="waiting_reply">Waiting reply</string>
    <string name="state">State</string>
    <string name="active_status">Active Status</string>
    <string name="on_hold">On Hold</string>
    <string name="occupied">Occupied</string>
    <string name="out_of_service">Out of Service</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_sent">Email Sent</string>
    <string name="distance_to">Distance To: </string>
    <string name="clients_orders">Clients Orders</string>
    <string name="delivery_men_list">Delivery Men List</string>
    <string name="set_note">Set Note</string>
    <string name="new_user">New User: </string>
    <string name="clients_requests">Clients Requests</string>
    <string name="add_medication">Add Medication</string>
    <string name="loading">Loading…</string>
    <string name="no_internet">Slow or no internet connection. Please check your internet settings</string>
    <string name="oh_shucks">Oh Shucks!</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">&lt;&lt; Back</string>
    <string name="we_just_need">We just need registered Email to sent password reset instructions</string>
    <string name="home">Home</string>
    <string name="set_address">Set Address</string>
    <string name="address_def">Address is defined</string>
    <string name="edit">Edit</string>
    <string name="ok">\"Ok\"</string>
    <string name="select_action">Please select action.</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="see_address">See Address</string>
    <string name="waiting_delivery">Waiting for delivery</string>
    <string name="rejected_by_you">Rejected by you</string>
    <string name="ph_ask">Pharmacy asking delivery men</string>
    <string name="delivered">Delivered</string>
    <string name="not_delivered">Not Delivered</string>
    <string name="make_call">Make Call</string>
</resources>
